Fixed error bar from overflowing.

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -7,11 +7,7 @@
   right: 0;
   bottom: 0;
   height: calc(100% - #{$toolbar-height + $toolbar-offset});
-  width: calc(
-    100%
-    - 200px /* layer list */
-    - 350px /* layer editor */
-  );
+  width: $layout-map-width;
 
   &--error {
     align-items: center;
